force-app/main/default/objects/EAtesting__mdt/EAtesting__mdt.object-meta.xml
<CustomObject>
    <label>EAtesting</label>
    <pluralLabel>EAtestings</pluralLabel>
</CustomObject>