force-app/main/default/objects/EAtesting__mdt/fields/Emp_Number__c.field-meta.xml
<CustomField>
    <fullName>Emp_Number__c</fullName>
    <label>Emp Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>