force-app/main/default/objects/EAtesting__mdt/fields/Emp_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emp_Phone__c</fullName>
    <label>Emp Phone</label>
    <type>Phone</type>
</CustomField>