force-app/main/default/objects/EAtesting__mdt/fields/Employee_email__c.field-meta.xml
<CustomField>
    <fullName>Employee_email__c</fullName>
    <label>Employee email</label>
    <type>Email</type>
</CustomField>